refactor: simplify thread-safe driver management
Consolidate ThreadSafeDriverManager, TestIsolation, and ParallelTestExtension
into a single, cohesive JUnit 5 extension.

Changes:
- Enhanced ParallelTestExtension with thread-local WebDriver management
- Added TestContext inner class for thread-isolated test data
- Added automatic screenshot capture on test failure
- Removed redundant ThreadSafeDriverManager.java (functionality merged)
- Removed redundant TestIsolation.java (functionality merged)
- Updated documentation in ZERO_TO_HERO_TUTORIAL.md
- Fixed deprecated Thread.getId() calls to use Thread.threadId() (Java 19+)

Benefits:
- Single extension instead of 3 separate classes
- Cleaner API: @ExtendWith(ParallelTestExtension.class)
- All functionality accessible via static methods
- Follows YAGNI principle - removed over-engineering

BREAKING CHANGE: Tests using ThreadSafeDriverManager or TestIsolation
directly should migrate to ParallelTestExtension static methods.